@@ -769,9 +769,17 @@ class Linker {
 			$items[] = $this->userTalkLink( $userId, $userText );
 		}
 		if( $userId ) {
+			// check if the user has an edit
+			if( $wgUser->edits( $userId ) == 0 ) {
+				$style = "class='new'";
+			} else {
+				$style = '';
+			}
 			$contribsPage = SpecialPage::getTitleFor( 'Contributions', $userText );
 			$items[] = $this->makeKnownLinkObj( $contribsPage ,
-				wfMsgHtml( 'contribslink' ) );
+				wfMsgHtml( 'contribslink' ),
+				'', '', '', '', $style
+			);
 		}
 		if( $blockable && $wgUser->isAllowed( 'block' ) ) {
 			$items[] = $this->blockLink( $userId, $userText );
